# simplenote-mcp

./: .deploy.env.example  .dev.vars.example  .gitignore  BOOTSTRAP.md  CLAUDE.md  FINDINGS_v3.html  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wrangler.jsonc
docs/: connector-selftest.md  project-instructions.md
python/: .env.example  README.md  pyproject.toml
python/simplenote_mcp/: __init__.py  server.py  store.py
src/: auth.ts  index.ts  mcp.ts  simperium.ts  store.ts  types.ts
test/: store.test.ts
