[project]
name = "simplenote-mcp"
version = "0.1.0"
description = "MCP connector exposing Simplenote as a persistent, cross-conversation file store for Claude web-chat projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "simplenote>=2.1.4",
]

[project.scripts]
simplenote-mcp = "simplenote_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simplenote_mcp"]
